---
source: crates/plotnik-lib/tests/conformance.rs
---
==== query ====
Q = (program (expression_statement [A: (identifier) @x  A: (number) @y]))

==== diagnostics ====
error: branch label `A` is already used in this alternation
 --> query.ptk:1:57
  |
1 | Q = (program (expression_statement [A: (identifier) @x  A: (number) @y]))
  |                                                         ^
  |
help: each branch label must be unique within an alternation
